- remove some cruft - fixed alert not showing until another alert happens - added (mostly temporary) marker labels - added link to this repo in footer - removed horseshoe falls equestria from con listing (didn't get funded)

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -39,3 +39,7 @@ a {
 .angular-google-map-container { 
 	height: 700px; 
 }
+
+.map-marker-label {
+	background-color: #333;
+}
